load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//bazel/ts:defs.bzl", "ts_proto_library")
load("//bazel/go:write_go_generated_source_files.bzl", "write_go_generated_source_files")

proto_library(
    name = "command_line_proto",
    srcs = ["command_line.proto"],
    visibility = ["//visibility:public"],
    deps = ["//bazel/options:options_proto"],
)

go_proto_library(
    name = "command_line_go_proto",
    importpath = "github.com/aspect-build/aspect-cli/bazel/command_line",
    proto = ":command_line_proto",
    visibility = ["//visibility:public"],
    deps = ["//bazel/options"],
)

write_go_generated_source_files(
    name = "write_pb_go",
    src = ":command_line_go_proto",
    output_files = [
        "command_line.pb.go",
    ],
    visibility = ["//bazel:__pkg__"],
)

go_library(
    name = "command_line",
    embed = [":command_line_go_proto"],
    importpath = "github.com/aspect-build/aspect-cli/bazel/command_line",
    visibility = ["//visibility:public"],
)

ts_proto_library(
    name = "command_line_proto_ts",
    gen_connect_es = False,
    node_modules = "//:node_modules",
    proto = ":command_line_proto",
    visibility = ["//visibility:public"],
    deps = ["//bazel/options:options_proto_ts"],
)
