load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "bazel_proto",
    srcs = ["flags.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "bazel_go_proto",
    importpath = "aspect.build/cli/bazel/flags",
    proto = ":bazel_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "flags",
    srcs = ["helpers.go"],
    embed = [":bazel_go_proto"],
    importpath = "aspect.build/cli/bazel/flags",
    visibility = ["//visibility:public"],
)
