load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "write_go_generated_source_files",
    srcs = ["write_go_generated_source_files.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@aspect_bazel_lib//lib:copy_to_directory",
        "@aspect_bazel_lib//lib:directory_path",
        "@aspect_bazel_lib//lib:write_source_files",
    ],
)
