load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load(":sha256.bzl", "sha256")

bzl_library(
    name = "sha256",
    srcs = ["sha256.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_skylib//lib:dicts",
        "@bazel_tools//tools/build_defs/hash:hash.bzl",
    ],
)

# Test for sha256

write_file(
    name = "test_artifact",
    testonly = True,
    out = "test_artifact.txt",
    content = [
        "Hello, World!",
        "",
    ],
)

sha256(
    name = "test_artifact_sha256",
    testonly = True,
    artifact = ":test_artifact",
)

write_file(
    name = "expected_test_artifact_sha256",
    testonly = True,
    out = "expected_test_artifact.sha256",
    content = [
        # Expected sha256 for test artifact
        "c98c24b677eff44860afea6f493bbaec5bb1c4cbb209c6fc2bbb47f66ff2ad31",
    ],
)

diff_test(
    name = "sha256_test",
    file1 = ":test_artifact_sha256",
    file2 = ":expected_test_artifact_sha256",
)
