bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "toolchains_protoc", version = "0.3.3")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    name = "protoc_toolchains",
    version = "v21.7",
)
use_repo(protoc, "com_google_protobuf")
