bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "toolchains_protoc", version = "0.4.1")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    name = "protoc_toolchains",
    google_protobuf = "com_google_protobuf",
    version = "v21.7",
)
use_repo(protoc, "com_google_protobuf")
