load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//bazel/go:write_go_generated_source_files.bzl", "write_go_generated_source_files")

proto_library(
    name = "invocation_policy_proto",
    srcs = ["invocation_policy.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "blaze_invocation_policy_go_proto",
    importpath = "aspect.build/cli/bazel/invocation_policy",
    proto = ":invocation_policy_proto",
    visibility = ["//visibility:public"],
)

write_go_generated_source_files(
    name = "write_pb_go",
    src = ":blaze_invocation_policy_go_proto",
    output_files = [
        "invocation_policy.pb.go",
    ],
    visibility = ["//bazel:__pkg__"],
)

go_library(
    name = "invocation_policy",
    embed = [":blaze_invocation_policy_go_proto"],
    importpath = "aspect.build/cli/bazel/invocation_policy",
    visibility = ["//visibility:public"],
)
