load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "options_proto",
    srcs = ["option_filters.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "options_go_proto",
    importpath = "aspect.build/cli/bazel/options",
    proto = ":options_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "options",
    embed = [":options_go_proto"],
    importpath = "aspect.build/cli/bazel/options",
    visibility = ["//visibility:public"],
)
