load("@aspect_rules_ts//ts:proto.bzl", "ts_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//bazel/go:write_go_generated_source_files.bzl", "write_go_generated_source_files")

proto_library(
    name = "options_proto",
    srcs = ["option_filters.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "options_go_proto",
    importpath = "aspect.build/cli/bazel/options",
    proto = ":options_proto",
    visibility = ["//visibility:public"],
)

write_go_generated_source_files(
    name = "write_pb_go",
    src = ":options_go_proto",
    output_files = [
        "option_filters.pb.go",
    ],
    visibility = ["//bazel:__pkg__"],
)

go_library(
    name = "options",
    embed = [":options_go_proto"],
    importpath = "aspect.build/cli/bazel/options",
    visibility = ["//visibility:public"],
)

ts_proto_library(
    name = "options_proto_ts",
    files_to_copy = [
        "option_filters_pb.d.ts",
    ],
    gen_connect_es = False,
    node_modules = "//:node_modules",
    proto = ":options_proto",
    visibility = ["//visibility:public"],
)
