load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "devtools_build_lib_packages_metrics_proto",
    srcs = ["package_load_metrics.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

go_proto_library(
    name = "devtools_build_lib_packages_metrics_go_proto",
    importpath = "aspect.build/cli/bazel/packages_metrics",
    proto = ":devtools_build_lib_packages_metrics_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "packages_metrics",
    embed = [":devtools_build_lib_packages_metrics_go_proto"],
    importpath = "aspect.build/cli/bazel/packages_metrics",
    visibility = ["//visibility:public"],
)
