load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//bazel/ts:defs.bzl", "ts_proto_library")
load("//bazel/go:write_go_generated_source_files.bzl", "write_go_generated_source_files")

proto_library(
    name = "devtools_build_lib_packages_metrics_proto",
    srcs = ["package_load_metrics.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

go_proto_library(
    name = "devtools_build_lib_packages_metrics_go_proto",
    importpath = "github.com/aspect-build/aspect-cli/bazel/packages_metrics",
    proto = ":devtools_build_lib_packages_metrics_proto",
    visibility = ["//visibility:public"],
)

write_go_generated_source_files(
    name = "write_pb_go",
    src = ":devtools_build_lib_packages_metrics_go_proto",
    output_files = [
        "package_load_metrics.pb.go",
    ],
    visibility = ["//bazel:__pkg__"],
)

go_library(
    name = "packages_metrics",
    embed = [":devtools_build_lib_packages_metrics_go_proto"],
    importpath = "github.com/aspect-build/aspect-cli/bazel/packages_metrics",
    visibility = ["//visibility:public"],
)

ts_proto_library(
    name = "metrics_proto_ts",
    gen_connect_es = False,
    node_modules = "//:node_modules",
    proto = ":devtools_build_lib_packages_metrics_proto",
    visibility = ["//visibility:public"],
)
